--- a/Depo/Depo/Presentation/UserStories/Others/SegmentedController/AllFilesSegmentedController.xib
+++ b/Depo/Depo/Presentation/UserStories/Others/SegmentedController/AllFilesSegmentedController.xib
@@ -6,11 +6,13 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="AllFilesSegmentedController" customModule="Billo" customModuleProvider="target">
             <connections>
+                <outlet property="collectionView" destination="mBe-sb-MyQ" id="sLU-ql-93Y"/>
                 <outlet property="containerView" destination="AfE-FJ-x8O" id="Yn8-f0-2GI"/>
                 <outlet property="segmentedControl" destination="BTw-Tw-zCW" id="vEY-K7-5ix"/>
                 <outlet property="segmentedControlContainer" destination="ChU-gk-RnU" id="Xg7-v4-EDC"/>
@@ -23,10 +25,25 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ChU-gk-RnU">
-                    <rect key="frame" x="0.0" y="44" width="414" height="60"/>
+                    <rect key="frame" x="0.0" y="44" width="414" height="72"/>
                     <subviews>
-                        <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="BTw-Tw-zCW" customClass="SegmentedControl" customModule="Billo" customModuleProvider="target">
-                            <rect key="frame" x="127" y="14.5" width="160" height="32"/>
+                        <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="FZ4-LF-1EG">
+                            <rect key="frame" x="0.0" y="0.0" width="414" height="72"/>
+                            <subviews>
+                                <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="mBe-sb-MyQ">
+                                    <rect key="frame" x="0.0" y="0.0" width="414" height="72"/>
+                                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                    <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="10" id="YkU-Tx-iKw">
+                                        <size key="itemSize" width="128" height="128"/>
+                                        <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                        <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                        <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                    </collectionViewFlowLayout>
+                                </collectionView>
+                            </subviews>
+                        </stackView>
+                        <segmentedControl hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="BTw-Tw-zCW" customClass="SegmentedControl" customModule="Billo" customModuleProvider="target">
+                            <rect key="frame" x="127" y="20.5" width="160" height="32"/>
                             <constraints>
                                 <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="160" id="8Oz-cn-aRF"/>
                             </constraints>
@@ -41,15 +58,19 @@
                     </subviews>
                     <color key="backgroundColor" name="primaryBackground"/>
                     <constraints>
+                        <constraint firstAttribute="bottom" secondItem="FZ4-LF-1EG" secondAttribute="bottom" id="4lC-Nj-2Mx"/>
+                        <constraint firstItem="FZ4-LF-1EG" firstAttribute="leading" secondItem="ChU-gk-RnU" secondAttribute="leading" id="Rra-0Q-A7e"/>
                         <constraint firstItem="BTw-Tw-zCW" firstAttribute="centerX" secondItem="ChU-gk-RnU" secondAttribute="centerX" id="TXE-vo-CiD"/>
                         <constraint firstItem="BTw-Tw-zCW" firstAttribute="centerY" secondItem="ChU-gk-RnU" secondAttribute="centerY" id="UwF-LS-RAK"/>
-                        <constraint firstAttribute="height" constant="60" id="Yyq-M7-Rr2"/>
+                        <constraint firstAttribute="height" constant="72" id="Yyq-M7-Rr2"/>
                         <constraint firstItem="BTw-Tw-zCW" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="ChU-gk-RnU" secondAttribute="leading" constant="10" id="aVi-rc-f4m"/>
+                        <constraint firstItem="FZ4-LF-1EG" firstAttribute="top" secondItem="ChU-gk-RnU" secondAttribute="top" id="cHf-nP-XNO"/>
                         <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="BTw-Tw-zCW" secondAttribute="trailing" constant="10" id="uvx-ef-SK2"/>
+                        <constraint firstAttribute="trailing" secondItem="FZ4-LF-1EG" secondAttribute="trailing" id="wsS-Yq-TYE"/>
                     </constraints>
                 </view>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="AfE-FJ-x8O">
-                    <rect key="frame" x="0.0" y="104" width="414" height="792"/>
+                    <rect key="frame" x="0.0" y="116" width="414" height="780"/>
                     <color key="backgroundColor" name="primaryBackground"/>
                 </view>
             </subviews>
@@ -71,5 +92,8 @@
         <namedColor name="primaryBackground">
             <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
     </resources>
 </document>
