--- a/Depo/Depo/Presentation/SubViews/CustomTabBars/TabBarViewController.xib
+++ b/Depo/Depo/Presentation/SubViews/CustomTabBars/TabBarViewController.xib
@@ -33,13 +33,13 @@
                             <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         </view>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="cui-rs-h2J" userLabel="botttomBarsContainerView">
-                            <rect key="frame" x="32" y="751" width="350" height="103"/>
+                            <rect key="frame" x="12" y="751" width="390" height="103"/>
                             <subviews>
                                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="APj-ro-gog">
-                                    <rect key="frame" x="0.0" y="0.0" width="350" height="70"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="390" height="70"/>
                                     <subviews>
                                         <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="XmD-Gm-tUS" customClass="MusicBar" customModule="Billo" customModuleProvider="target">
-                                            <rect key="frame" x="0.0" y="0.0" width="350" height="70"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="390" height="70"/>
                                             <constraints>
                                                 <constraint firstAttribute="height" constant="70" id="5y9-Sm-8zM"/>
                                             </constraints>
@@ -47,14 +47,13 @@
                                     </subviews>
                                 </stackView>
                                 <tabBar contentMode="scaleToFill" translucent="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Pdh-iF-uTx" customClass="MainTabBar" customModule="Billo" customModuleProvider="target">
-                                    <rect key="frame" x="0.0" y="54" width="350" height="49"/>
+                                    <rect key="frame" x="0.0" y="54" width="390" height="49"/>
                                     <items/>
                                 </tabBar>
                             </subviews>
                             <constraints>
                                 <constraint firstItem="APj-ro-gog" firstAttribute="top" relation="lessThanOrEqual" secondItem="Pdh-iF-uTx" secondAttribute="top" id="1bp-V6-bQd"/>
                                 <constraint firstItem="Pdh-iF-uTx" firstAttribute="leading" secondItem="cui-rs-h2J" secondAttribute="leading" id="7Tf-er-ViB"/>
-                                <constraint firstAttribute="width" priority="749" constant="350" id="9UO-nK-X2x"/>
                                 <constraint firstAttribute="trailing" secondItem="Pdh-iF-uTx" secondAttribute="trailing" id="HLR-wj-uqb"/>
                                 <constraint firstAttribute="bottom" secondItem="Pdh-iF-uTx" secondAttribute="bottom" id="Jbz-On-7xz"/>
                                 <constraint firstItem="APj-ro-gog" firstAttribute="top" secondItem="cui-rs-h2J" secondAttribute="top" id="N3e-bG-xUb"/>
@@ -71,9 +70,9 @@
                         <constraint firstItem="i0i-at-wPy" firstAttribute="top" secondItem="FJl-Cl-AGP" secondAttribute="top" id="GsX-8P-b56"/>
                         <constraint firstItem="i0i-at-wPy" firstAttribute="leading" secondItem="FJl-Cl-AGP" secondAttribute="leading" id="KUC-Ts-NXO"/>
                         <constraint firstAttribute="trailing" secondItem="i0i-at-wPy" secondAttribute="trailing" id="NOK-Ih-oLn"/>
-                        <constraint firstItem="cui-rs-h2J" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="ero-vK-F2b" secondAttribute="leading" constant="12" id="O8D-PA-LQ4"/>
+                        <constraint firstItem="cui-rs-h2J" firstAttribute="leading" secondItem="ero-vK-F2b" secondAttribute="leading" constant="12" id="O8D-PA-LQ4"/>
                         <constraint firstItem="ero-vK-F2b" firstAttribute="bottom" secondItem="cui-rs-h2J" secondAttribute="bottom" constant="8" id="Q8M-dn-dyN"/>
-                        <constraint firstItem="ero-vK-F2b" firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="cui-rs-h2J" secondAttribute="trailing" constant="12" id="aOe-zS-xmE"/>
+                        <constraint firstItem="ero-vK-F2b" firstAttribute="trailing" secondItem="cui-rs-h2J" secondAttribute="trailing" constant="12" id="aOe-zS-xmE"/>
                         <constraint firstAttribute="bottom" secondItem="i0i-at-wPy" secondAttribute="bottom" id="pDa-ye-bFD"/>
                         <constraint firstItem="cui-rs-h2J" firstAttribute="centerX" secondItem="FJl-Cl-AGP" secondAttribute="centerX" id="udH-Hq-uNX"/>
                     </constraints>
