--- a/Depo/Depo/Presentation/SubViews/TopBar/GridListTopBar.xib
+++ b/Depo/Depo/Presentation/SubViews/TopBar/GridListTopBar.xib
@@ -23,7 +23,7 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="R7m-go-R4c">
-                    <rect key="frame" x="10" y="11" width="72" height="43"/>
+                    <rect key="frame" x="10" y="6" width="72" height="43"/>
                     <constraints>
                         <constraint firstAttribute="width" relation="greaterThanOrEqual" priority="750" constant="68" id="Dzb-Wi-FeT"/>
                         <constraint firstAttribute="height" constant="43" id="xi5-cC-uuT"/>
@@ -37,7 +37,7 @@
                     </connections>
                 </button>
                 <segmentedControl hidden="YES" opaque="NO" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="wal-TA-Zbe">
-                    <rect key="frame" x="103.5" y="18" width="160" height="30"/>
+                    <rect key="frame" x="103.5" y="13" width="160" height="30"/>
                     <constraints>
                         <constraint firstAttribute="width" relation="greaterThanOrEqual" priority="999" constant="160" id="uCC-uM-FL8"/>
                         <constraint firstAttribute="height" constant="29" id="uSO-n1-fxn"/>
@@ -48,7 +48,7 @@
                     </segments>
                 </segmentedControl>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2hB-ca-1KW">
-                    <rect key="frame" x="321" y="14.5" width="36" height="36"/>
+                    <rect key="frame" x="321" y="9.5" width="36" height="36"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="36" id="73N-Rs-kra"/>
                         <constraint firstAttribute="width" constant="36" id="TDf-0W-O3l"/>
@@ -59,15 +59,25 @@
                         <action selector="gridListAction:" destination="-1" eventType="touchUpInside" id="bi1-0X-PA5"/>
                     </connections>
                 </button>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="cCH-zD-zC4">
+                    <rect key="frame" x="0.0" y="54" width="367" height="1"/>
+                    <color key="backgroundColor" name="filesSeperator"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="1" id="lOx-N3-hA3"/>
+                    </constraints>
+                </view>
             </subviews>
             <color key="backgroundColor" name="primaryBackground"/>
             <constraints>
+                <constraint firstItem="cCH-zD-zC4" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="8B6-Q6-iEr"/>
                 <constraint firstItem="2hB-ca-1KW" firstAttribute="centerY" secondItem="R7m-go-R4c" secondAttribute="centerY" id="CG9-nI-DEH"/>
-                <constraint firstItem="R7m-go-R4c" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" constant="5" id="ZD4-gp-yMM"/>
+                <constraint firstAttribute="bottom" secondItem="cCH-zD-zC4" secondAttribute="bottom" id="Dee-CA-aI2"/>
+                <constraint firstItem="R7m-go-R4c" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="ZD4-gp-yMM"/>
                 <constraint firstItem="wal-TA-Zbe" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="R7m-go-R4c" secondAttribute="trailing" constant="8" id="ZWt-3B-set"/>
                 <constraint firstItem="R7m-go-R4c" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="10" id="hsT-5L-dXY"/>
                 <constraint firstItem="wal-TA-Zbe" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="lWj-2g-ibL"/>
                 <constraint firstItem="wal-TA-Zbe" firstAttribute="centerY" secondItem="R7m-go-R4c" secondAttribute="centerY" id="p6X-9N-zV0"/>
+                <constraint firstAttribute="trailing" secondItem="cCH-zD-zC4" secondAttribute="trailing" id="r06-zc-XFF"/>
                 <constraint firstAttribute="trailing" secondItem="2hB-ca-1KW" secondAttribute="trailing" constant="10" id="z7H-O7-FVO"/>
             </constraints>
             <nil key="simulatedStatusBarMetrics"/>
@@ -83,6 +93,9 @@
         <image name="iconViewList" width="24" height="24"/>
         <namedColor name="charcoalGrey">
             <color red="0.2199999988079071" green="0.23100000619888306" blue="0.25499999523162842" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="filesSeperator">
+            <color red="0.92156862745098034" green="0.92549019607843142" blue="0.92549019607843142" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <namedColor name="primaryBackground">
             <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
