--- a/Depo/Depo/Presentation/SubViews/CustomTabBars/TabBarCards/Cards/ProgressTabBarCard/ProgressTabBarCard.xib
+++ b/Depo/Depo/Presentation/SubViews/CustomTabBars/TabBarCards/Cards/ProgressTabBarCard/ProgressTabBarCard.xib
@@ -9,7 +9,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" id="zTU-ai-S5l" customClass="ProgressTabBarCard" customModule="lifebox" customModuleProvider="target">
+        <view contentMode="scaleToFill" id="zTU-ai-S5l" customClass="ProgressTabBarCard" customModule="Billo" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="422" height="93"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <subviews>
@@ -53,7 +53,7 @@
                                         </stackView>
                                     </subviews>
                                 </stackView>
-                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="DYQ-HS-tSY" customClass="LoadingImageView" customModule="lifebox" customModuleProvider="target">
+                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="DYQ-HS-tSY" customClass="LoadingImageView" customModule="Billo" customModuleProvider="target">
                                     <rect key="frame" x="234.5" y="0.0" width="40" height="40"/>
                                     <constraints>
                                         <constraint firstAttribute="height" constant="40" id="laL-9m-uye"/>
